2008-01-13  David A. Capello  <dacap@users.sourceforge.net>

	* src/widgets/editor/cursor.c, src/widgets/editor/editor.c: Fixed
	a lot of bugs in the code that draws/cleans the brush-cursor in
	the editor.

2008-01-06  David A. Capello  <dacap@users.sourceforge.net>

	* src/jinete/jwidget.c (jwidget_free_deferred): Added.

	* src/jinete/jmanager.c: Replaced 'jmanager_poll' with
	'jmanager_generate_messages' and
	'jmanager_dispatch_messages'. This fixed a lot of bugs when mix up
	two foreground windows.

	* src/jinete/jfilesel.c (generate_extensions): Fixed a bug that
	leaves 'extensions=NULL' when it's should be 'extensions=a empty
	list'.

	* src/modules/gui.c (load_widget): Fixed the most stupid code I
	ever write (double loading of the widget from the .jid files).

	* src/modules/rootmenu.c (load_menu_by_id): Added to fix a problem
	with popup-menus of the new jmenu.c implementation.

2008-01-05  David A. Capello  <dacap@users.sourceforge.net>

	* src/commands/cmd_play_animation.c: Added.

	* src/commands/cmd_goto_frame.c: Added goto_*_frame commands.

	* src/jinete/jmenu.c (Base): Added 'is_processing' to avoid
	sending menu-messages when there're menu-messages in the queue.

2008-01-03  David A. Capello  <dacap@users.sourceforge.net>

	* src/jinete/jmenu.c (menubox_msg_proc): Finally works (with keys
	and without JM_IDLE message).

2008-01-02  David A. Capello  <dacap@users.sourceforge.net>

	* src/jinete/jmenu.c: In all these day I was working to make it
	working without JM_IDLE. The keyboard is the only thing that
	doesn't work right now.

	* src/widgets/preview.c: Doesn't use JM_IDLE message anymore.

	* src/widgets/statebar.c: Doesn't use JM_IDLE message anymore.

2007-12-26  David A. Capello  <dacap@users.sourceforge.net>

	* src/jinete/jmanager.c: Added 'enqueue_messages_before_this'.

	* src/widgets/tabs.c (tabs_msg_proc): Fixed a problem that allow
	to the user select to no-tabs at all.

	* src/jinete/jmanager.c (jmanager_poll): Double-click now is